# Tellyfin

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENCE  Notes.md  README-vsh.md  README.md  Themes.md  forge.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  rustfmt.toml  tsconfig.json  vite.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
bootstrap/src/: main.rs
crates/start-tellyfin/: Cargo.toml  README.md
crates/start-tellyfin/src/: main.rs
crates/tellyfin-plugin/: Cargo.toml
crates/util/: Cargo.toml
libtellyfin/: Cargo.toml
libtellyfin/src/: lib.rs
list-dvd/: Cargo.toml
list-dvd/src/: main.rs
public/: xmb-wave.html
src/: App.css  App.tsx  AppStates.ts  home-categories.ts  modules.d.ts  panel.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/audio/: bass.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/gamepad/: mod.rs
src-tauri/src/mpv/: control.rs  event.rs  init.rs  mod.rs  status.rs  thumb.rs
src-tauri/src/plugins/: invoke.rs  mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/schemes/: mod.rs  xb.rs
src-tauri/src/settings/: manager.rs  mod.rs  user.rs
src-tauri/src/states/: mod.rs
src-tauri/src/theme/: create_table.sql  icons.rs  mod.rs  sound.rs  upsert_theme.sql
src-tauri/src/util/: safe_lock.rs
src-tauri/src/window/: mod.rs
src/Icons/: Arrow.Right.tsx  Arrow.ts  NowPlaying.tsx  Quickplay.tsx  RepeatOnce.tsx  Stop.tsx  index.ts
src/components/: ContentGrid.tsx  ContentList.tsx  ControlPanels.tsx  Icon.tsx  Input.tsx  Loading.tsx  MpvStateProvider.tsx  SettingsProvider.tsx  Timeline.tsx
src/context/: .gitignore  AudioFeedback.tsx  GamepadInput.tsx  Jellyfin.tsx  VideoContext.tsx
src/database/: index.ts
src/functions/: play.ts  stopped.ts
src/hooks/: use-did-update.ts  use-input.ts
src/main/: globals.ts  immediate-init.ts  important-values.ts  index.ts  intercepts.ts  mpv.ts  mutex.ts  screen-listeners.ts
src/preload/: database.ts  index.ts  media-server.ts  play-state.ts  user.ts
src/renderer/: index.html  index.ts
src/resource/: Third-Party.md
src/screens/: Home.tsx  Video.tsx  common.ts  jellyfin.ts
src/settings/: default.ts
src/util/: functions.ts
tellyfin-plugin/: Cargo.toml
tellyfin-plugin/src/: lib.rs
themes/: README.md
vsh/: .eslintrc.json  Notes.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
vsh/public/: regl.js  xmb-wave.html
vsh/src/: App.css  App.tsx  AppStates.ts  fonts.css  home-categories.ts  main.tsx  (+3 more)
vsh/src-tauri/: Cargo.toml  tauri.conf.json
(+231 files in other folders)
