[workspace]
members = [
	# "bootstrap",
	"crates/libtellyfin",
	"crates/tellyfin-plugin",
	"crates/bass",
	"list-dvd",
	"src-tauri",
]
exclude = ["bootstrap"]
resolver = "2"

[workspace.dependencies]
# Tellyfin
libtellyfin = { path = "crates/libtellyfin" }
tellyfin-plugin = { path = "crates/tellyfin-plugin" }
steamlocate = { version = "2.0.0-beta", features = ["locate"] }
# Others
bass = { path = "crates/bass", features = ["mixer", "cd", "loud", "fx"] }
