[workspace]
members = [
	# "bootstrap",
	"crates/bass",
	"crates/libtellyfin",
	"crates/list-dvd",
	"crates/start-tellyfin",
	"crates/tellyfin-plugin",
	"src-tauri",
]
exclude = [
	"bootstrap",
	"packages/mpv",
	"packages/node-bass",
	"packages/settings",
	"packages/theme",
	"packages/toml",
]
resolver = "2"

[workspace.dependencies]
# Tellyfin
libtellyfin = { path = "crates/libtellyfin" }
tellyfin-plugin = { path = "crates/tellyfin-plugin" }
steamlocate = { version = "2.0.0-beta", features = ["locate"] }
# Others
bass = { path = "crates/bass", features = ["mixer", "cd", "loud", "fx"] }
