[package]
name = "vsh"
version = "0.0.0"
description = "An XMB for Windows (and eventually Linux!)"
authors = ["ILikeTeaALot"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
# To get the HWND to pass to MPV. version "0.6" because it's what tauri uses
raw-window-handle = "0.6"
libmpv2 = "3.0.0"
libmpv2-sys = "*"

# Dependencies specified at workspace root.
libtellyfin = { workspace = true }
tellyfin-plugin = { workspace = true }
bass = { workspace = true }
toml = "0.8"

# RuSQLite
serde_rusqlite = "0.35.0"
rusqlite = { version = "0.31", features = [
	"bundled",
	"hooks",
	"serde_json",
	"vtab",
	# "csvtab",
	# "uuid",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
