[package]
name = "start-tellyfin"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = { version = "3.4.5", features = ["termination"] }
directories = "5"
home = "0.5.9"

[dependencies.windows-sys]
version = "0.59.0"
features = ["Win32", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"]
